fix meal details alignment

--- a/css/favoritesList.css
+++ b/css/favoritesList.css
@@ -6,7 +6,6 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 20px;
     margin-top: 40px;
     transition: all 0.4s ease-in-out;
 
@@ -21,9 +20,10 @@
     border: 1px solid rgba(187, 187, 187, 0.187);
 
     position: fixed;
-    top: 50%;  
-    left: 50%; 
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
+
     z-index: 1000;
 
     overflow-y: scroll;
@@ -190,7 +190,7 @@
 .favorites-container .shape {
     align-self: center;
     background-image: linear-gradient(147deg, #ffe53bc3 0%, #ff2525bd 74%);
-	animation: morph 8s ease-in-out infinite;
+	/* animation: morph 8s ease-in-out infinite; */
 	border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
 	height: 150px;
 	width: 200px;
