--- a/css/mealCard.css
+++ b/css/mealCard.css
@@ -91,7 +91,8 @@
 .meal-cards .shape {
     align-self: center;
     background-image: linear-gradient(147deg, #ffe53bc3 0%, #ff2525bd 74%);
-	animation: morph 8s ease-in-out infinite;
+    /* Consumes lots of CPU */
+	/* animation: morph 8s ease-in-out infinite; */ 
 	border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
 	height: 150px;
 	width: 200px;
