--- a/css/mealDetails.css
+++ b/css/mealDetails.css
@@ -11,7 +11,6 @@
     height: 90vh;
     width: 80vw;
     border-radius: 50px;
-    margin: 10px;
     margin-bottom: 20px;
     background-color: rgb(0, 0, 0);
 
@@ -93,7 +92,7 @@
 .meal-details-bg {
     align-self: center;
     background-image: linear-gradient(147deg, #ffe53bc3 0%, #ff2525bd 74%);
-	animation: morph 8s ease-in-out infinite;
+	/* animation: morph 8s ease-in-out infinite; */
 	border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
 	height: 150px;
 	width: 200px;
@@ -257,6 +256,10 @@
 
     .meal-details {
         width: 85vw;
+    }
+
+    .meal-details .meal-footer>i {
+        margin-right: 20px;
     }
     
     
