--- a/css/navbar.css
+++ b/css/navbar.css
@@ -129,6 +129,13 @@
 }
 
 
+.blur-bg {
+    background-color: rgba(0, 0, 0, 0.375);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(15px);
+
+}
+
 
 
 
@@ -195,7 +202,7 @@
         left: 0;
         z-index: -1;
         color: gray;
-        background-color: black;
+        background-color: rgba(0, 0, 0, 0.897);
         width: 100vw;
         padding-top: 350px;
         font-size: 1.2rem;
@@ -225,7 +232,13 @@
         width: 42px;
         border-radius: 50%;
         margin-bottom: 10px;
+        margin-right: 10px;
     
+    }
+
+    .nav-footer {
+        display: flex;
+        align-items: center;
     }
     
     
